Fix text spacing

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,3 +1,7 @@
 @tailwind preflight;
 
 @tailwind utilities;
+
+blockquote, dl, dd, h1, h2, h3, h4, h5, h6, figure, p, pre {
+  margin: 0 0 1rem 0;
+}
